Fix dark mode issues
- Fix dark mode display issues in multiple pages
- Update README.md

--- a/src/global-styles/colors.scss
+++ b/src/global-styles/colors.scss
@@ -14,6 +14,7 @@ $violet: #b01eff;
 $pink: #e1467c;
 $blue: #3672f8;
 $middle-blue: #546bfb;
+$pink-blue: #56CCF2;
 $teal: #56ccf2;
 $green: #a6e1d5;
 $turquoise: #14f1d9;
